force-app/main/default/objects/Meeting__c/fields/ANY_PREVIOUS_MEETINGS_C__c.field-meta.xml
<CustomField>
    <fullName>ANY_PREVIOUS_MEETINGS_C__c</fullName>
    <label>Previous meeting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>