force-app/main/default/objects/Meeting__c/fields/CREATEDBYID__c.field-meta.xml
<CustomField>
    <fullName>CREATEDBYID__c</fullName>
    <label>Created by ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>