force-app/main/default/objects/Meeting__c/fields/HCP_Confirmation_Stage__c.field-meta.xml
<CustomField>
    <fullName>HCP_Confirmation_Stage__c</fullName>
    <label>HCP Confirmation Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Followed-up</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Reminded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>