force-app/main/default/objects/Meeting__c/fields/LASTACTIVITYDATE__c.field-meta.xml
<CustomField>
    <fullName>LASTACTIVITYDATE__c</fullName>
    <label>Last Activity Date</label>
    <type>DateTime</type>
</CustomField>