force-app/main/default/objects/Meeting__c/fields/LASTREFERENCEDDATE__c.field-meta.xml
<CustomField>
    <fullName>LASTREFERENCEDDATE__c</fullName>
    <label>Last Referenced Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>