force-app/main/default/objects/Meeting__c/fields/LASTVIEWEDDATE__c.field-meta.xml
<CustomField>
    <fullName>LASTVIEWEDDATE__c</fullName>
    <label>Last Viewed Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>