force-app/main/default/objects/Meeting__c/fields/OCE_ALLOWEDMMRECORDTYPESFORALLOCATION__c.field-meta.xml
<CustomField>
    <fullName>OCE_ALLOWEDMMRECORDTYPESFORALLOCATION__c</fullName>
    <label>Allowed Record Type for All Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>