force-app/main/default/objects/Meeting__c/fields/OCE_APPROVALSTATUS_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_APPROVALSTATUS_C__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>