force-app/main/default/objects/Meeting__c/fields/OCE_AVERAGEACTUALEXPENSECURRENCY_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_AVERAGEACTUALEXPENSECURRENCY_C__c</fullName>
    <label>Actual Expense Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>