force-app/main/default/objects/Meeting__c/fields/OCE_AVERAGEESTIMATEDEXPENSECURRENCY_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_AVERAGEESTIMATEDEXPENSECURRENCY_C__c</fullName>
    <label>Average Estimated Expense Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>