force-app/main/default/objects/Meeting__c/fields/OCE_AVERAGEESTIMATEDEXPENSES_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_AVERAGEESTIMATEDEXPENSES_C__c</fullName>
    <label>Average Estimated Expenses</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>