force-app/main/default/objects/Meeting__c/fields/OCE_BUSINESSJUSTIFICATION_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_BUSINESSJUSTIFICATION_C__c</fullName>
    <label>Business Justifcation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>