force-app/main/default/objects/Meeting__c/fields/OCE_COMMENTS_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_COMMENTS_C__c</fullName>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>