force-app/main/default/objects/Meeting__c/fields/OCE_CONTEXTUSERROLE_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_CONTEXTUSERROLE_C__c</fullName>
    <label>Context User Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>