force-app/main/default/objects/Meeting__c/fields/OCE_DELIVERYFORMAT_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_DELIVERYFORMAT_C__c</fullName>
    <label>Delivery Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>