force-app/main/default/objects/Meeting__c/fields/OCE_ENDDATETIME_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_ENDDATETIME_C__c</fullName>
    <label>End Date Time</label>
    <type>Date</type>
</CustomField>