force-app/main/default/objects/Meeting__c/fields/OCE_ESTIMATEDPARTICIPANTS_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_ESTIMATEDPARTICIPANTS_C__c</fullName>
    <label>Estimated Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>