force-app/main/default/objects/Meeting__c/fields/OCE_FBSERVEDBY_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_FBSERVEDBY_C__c</fullName>
    <label>F&amp;B Served By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>