force-app/main/default/objects/Meeting__c/fields/OCE_HOSTINGBUSINESSUNIT_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_HOSTINGBUSINESSUNIT_C__c</fullName>
    <label>Hosting Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>