force-app/main/default/objects/Meeting__c/fields/OCE_HOSTINGCOUNTRY_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_HOSTINGCOUNTRY_C__c</fullName>
    <label>Hosting Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>