force-app/main/default/objects/Meeting__c/fields/OCE_HOSTINGSTARTDATETIME_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_HOSTINGSTARTDATETIME_C__c</fullName>
    <label>Hosting Start Date Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>