force-app/main/default/objects/Meeting__c/fields/OCE_HOSTINGTIMEZONE_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_HOSTINGTIMEZONE_C__c</fullName>
    <label>Hosting Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>