force-app/main/default/objects/Meeting__c/fields/OCE_LOCATIONTYPE_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_LOCATIONTYPE_C__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-Office</fullName>
            </value>
            <value>
                <fullName>Out of Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>