force-app/main/default/objects/Meeting__c/fields/OCE_MAIN_CONTACT_INFORMATION_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_MAIN_CONTACT_INFORMATION_C__c</fullName>
    <label>Main Contact Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>