force-app/main/default/objects/Meeting__c/fields/OCE_MEETINGID_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_MEETINGID_C__c</fullName>
    <label>Meeting ID from Engage Org.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>