force-app/main/default/objects/Meeting__c/fields/OCE_MEMBERSALLOCATEDTOESTIMATEEXPENSE__c.field-meta.xml
<CustomField>
    <fullName>OCE_MEMBERSALLOCATEDTOESTIMATEEXPENSE__c</fullName>
    <label>Member Allocated to Estimate Expense</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>