force-app/main/default/objects/Meeting__c/fields/OCE_OBJECTIVES_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_OBJECTIVES_C__c</fullName>
    <label>Objectives</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>