force-app/main/default/objects/Meeting__c/fields/OCE_OFFLINECREATEDBYID_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_OFFLINECREATEDBYID_C__c</fullName>
    <label>Offline Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>