force-app/main/default/objects/Meeting__c/fields/OCE_OFFLINELASTMODIFIEDBYID_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_OFFLINELASTMODIFIEDBYID_C__c</fullName>
    <label>Online Last Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>