force-app/main/default/objects/Meeting__c/fields/OCE_OFFLINELASTMODIFIEDDATE_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_OFFLINELASTMODIFIEDDATE_C__c</fullName>
    <label>Offline Last Modified Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>