force-app/main/default/objects/Meeting__c/fields/OCE_OFFLINEUNIQUEID_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_OFFLINEUNIQUEID_C__c</fullName>
    <label>Offline Unique ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>