force-app/main/default/objects/Meeting__c/fields/OCE_ONBEHALFOFUSER_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_ONBEHALFOFUSER_C__c</fullName>
    <label>On Behalf of User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>