force-app/main/default/objects/Meeting__c/fields/OCE_ORGANIZINGBUSINESSUNIT_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_ORGANIZINGBUSINESSUNIT_C__c</fullName>
    <label>Organizing Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>