force-app/main/default/objects/Meeting__c/fields/OCE_ROLES1_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_ROLES1_C__c</fullName>
    <label>Roles 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>