force-app/main/default/objects/Meeting__c/fields/OCE_ROLES3_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_ROLES3_C__c</fullName>
    <label>Roles 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>