force-app/main/default/objects/Meeting__c/fields/OCE_STARTDATETIME_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_STARTDATETIME_C__c</fullName>
    <label>Start Date\Time</label>
    <type>Date</type>
</CustomField>