force-app/main/default/objects/Meeting__c/fields/OCE_TERRITORIES_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_TERRITORIES_C__c</fullName>
    <label>Terirtiries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>