force-app/main/default/objects/Meeting__c/fields/OCE_TOPIC_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_TOPIC_C__c</fullName>
    <label>Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>