force-app/main/default/objects/Meeting__c/fields/OCE_TOTALACTUALEXPENSES_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_TOTALACTUALEXPENSES_C__c</fullName>
    <label>Total Actual Expenses</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>