force-app/main/default/objects/Meeting__c/fields/Payment_Stage__c.field-meta.xml
<CustomField>
    <fullName>Payment_Stage__c</fullName>
    <label>Payment Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process Fee Payment</fullName>
            </value>
            <value>
                <fullName>Receive HCP Expenses</fullName>
            </value>
            <value>
                <fullName>Review HCP Expenses</fullName>
            </value>
            <value>
                <fullName>Process Expense Payment</fullName>
            </value>
            <value>
                <fullName>Reconcile all Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>