force-app/main/default/objects/Meeting__c/fields/Planned_Cost__c.field-meta.xml
<CustomField>
    <fullName>Planned_Cost__c</fullName>
    <label>Planned Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>