force-app/main/default/objects/Meeting__c/fields/RECORDTYPEID__c.field-meta.xml
<CustomField>
    <fullName>RECORDTYPEID__c</fullName>
    <label>Record Type ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>