force-app/main/default/objects/Meeting__c/fields/REGION_C__c.field-meta.xml
<CustomField>
    <fullName>REGION_C__c</fullName>
    <label>REGION__C</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>