force-app/main/default/objects/Meeting__c/fields/Subscribed_Services__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_Services__c</fullName>
    <label>Subscribed Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HCP Confirmation</fullName>
            </value>
            <value>
                <fullName>Travel Management</fullName>
            </value>
            <value>
                <fullName>Payment and Reconciliation</fullName>
            </value>
            <value>
                <fullName>Location and Vendor Management (Offsite)</fullName>
            </value>
            <value>
                <fullName>Location and Vendor Management (Remote)</fullName>
            </value>
            <value>
                <fullName>Location and Vendor Management (Onsite)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>