force-app/main/default/objects/Meeting__c/fields/Traveling_Stage__c.field-meta.xml
<CustomField>
    <fullName>Traveling_Stage__c</fullName>
    <label>Traveling Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Needs\Preferences</fullName>
            </value>
            <value>
                <fullName>Research Options</fullName>
            </value>
            <value>
                <fullName>Provide Options</fullName>
            </value>
            <value>
                <fullName>Confirm Options</fullName>
            </value>
            <value>
                <fullName>Book Travel</fullName>
            </value>
            <value>
                <fullName>Send Full Itinerary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>