force-app/main/default/objects/Meeting__c/listViews/My_Meetings.listView-meta.xml
<ListView>
    <fullName>My_Meetings</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Meetings</label>
</ListView>